docs(daily): 2026-05-26 daily expand notes (6 topics)